RESOLVED FIXED264334
AirPods removed from ears should not disturb an ongoing video call
https://bugs.webkit.org/show_bug.cgi?id=264334
Summary AirPods removed from ears should not disturb an ongoing video call
youenn fablet
Reported 2023-11-07 07:21:56 PST
AirPods removed from ears should not disturb and ongoing video call
Attachments
youenn fablet
Comment 1 2023-11-07 07:22:09 PST
youenn fablet
Comment 2 2023-11-07 07:34:55 PST
EWS
Comment 3 2023-11-09 01:14:09 PST
Committed 270433@main (71ef02a300c4): <https://commits.webkit.org/270433@main> Reviewed commits have been landed. Closing PR #20103 and removing active labels.
youenn fablet
Comment 4 2023-11-15 06:18:37 PST
*** Bug 263246 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.