AirPods removed from ears should not disturb and ongoing video call https://bugs.webkit.org/show_bug.cgi?id=264334 rdar://116091083

Reviewed by Eric Carlson.

When AirPods are removed from ears, AirPods are disappearing from the list of existing devices.
Before the patch, it would trigger capture failure. But web pages do not handle well capture failure.
To help web pages, if capturing with the default microphone and the microphone is disappearing, we are now
migrating to the new default microphone.
We make sure to trigger a configurationchange event on the MediaStreamTrack, which exposes the change to the web page.

* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp:
(WebCore::BaseAudioSharedUnit::setCaptureDevice):
(WebCore::BaseAudioSharedUnit::devicesChanged):
* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h:
(WebCore::BaseAudioSharedUnit::migrateToNewDefaultDevice):
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp:
(WebCore::CoreAudioSharedUnit::migrateToNewDefaultDevice):
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.h:

Canonical link: https://commits.webkit.org/270433@main